Try to fix logo size on Safari mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -58,7 +58,7 @@ body.post {
 .header-content-inner {
     img {
         width: 50px;
-        height: auto;
+        height: 50px;
         display: block;
         margin-left: auto;
         margin-right: auto;
